# meeting-minutes

./: .gitignore  fix_toolchain.bat  run.bat
backend/: install_dependancies_for_windows.ps1
cli/: Cargo.toml
cli/src/: main.rs  utils.rs
cli/src/audio/: capture.rs  mod.rs
cli/src/diarization/: mod.rs
cli/src/whisper_engine/: mod.rs  whisper_engine.rs
frontend/src-tauri/src/: lib.rs
frontend/src-tauri/src/audio/: incremental_saver.rs
frontend/src-tauri/src/diarization/: clustering.rs  commands.rs  extraction.rs  mod.rs  model.rs
frontend/src/components/: DiarizationSettings.tsx  TranscriptSettings.tsx  TranscriptView.tsx
frontend/src/types/: index.ts
