[package]
name = "meetily-cli"
version = "0.1.0"
edition = "2021"

[dependencies]
# Audio
cpal = "0.15.3"
hound = "3.5"
symphonia = { version = "0.5.4", features = ["aac", "isomp4", "opt-simd"] }
rubato = "0.15.0"
ringbuf = "0.4.8"
nnnoiseless = "0.5"

# Whisper
whisper-rs = { version = "0.13.2", features = ["raw-api"] }

# Diarization (ONNX)
ort = { version = "2.0.0-rc.10" }
ndarray = "0.16"

# Async & Runtime
tokio = { version = "1.32.0", features = ["full"] }
async-trait = "0.1"
futures-util = "0.3"

# CLI & Utils
clap = { version = "4.3", features = ["derive"] }
anyhow = "1.0"
log = "0.4"
env_logger = "0.11"
chrono = { version = "0.4.31", features = ["serde"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
lazy_static = "1.4.0"
reqwest = { version = "0.11", features = ["blocking", "multipart", "json", "stream"] }
uuid = { version = "1.0", features = ["v4", "serde"] }
thiserror = "2.0.16"
dirs = "6.0.0"

[target.'cfg(target_os = "windows")'.dependencies]
whisper-rs = { version = "0.13.2", features = ["raw-api", "vulkan"] }

[target.'cfg(target_os = "macos")'.dependencies]
whisper-rs = { version = "0.13.2", features = ["raw-api", "metal", "coreml"] }
cidre = { git = "https://github.com/yury/cidre", rev = "a9587fa", features = ["av"] }

[patch.crates-io]
cpal = { git = "https://github.com/RustAudio/cpal", rev = "51c3b43" }
esaxx-rs = { git = "https://github.com/thewh1teagle/esaxx-rs.git", branch = "feat/dynamic-msvc-link" }
